# memev2

./: ..env.swp  .dockerignore  Cargo.toml  Dockerfile.rust  Makefile  README.md  deploy-instructions.md
.github/: copilot-instructions.md
meme-snipe-v18/: .env.autonomous  .env.example  .env.sample  .env.save  .gitignore  ACTIVATION_SUMMARY.md  Cargo.toml  Dockerfile.python  Dockerfile.rust  Dockerfile.rust.simple  GO_LIVE_CHECKLIST.md  Makefile  NETWORK_SECURITY_TODO.md  OPTION_A_IMPLEMENTATION_SUCCESS.md  ROLLBACK_REFERENCE.md  add-missing-critical-vars.sh  autonomous_allocator.py  cleanup-compose-files.sh  cleanup-docker.sh  cleanup-platinum.sh  db_indexes.sql  deploy.sh  docker-compose.prod.yml  docker-compose.security.yml  docker-compose.upgraded.yml  docker-compose.working.yml  docker-compose.yml  docker-compose.yml.backup  env.example  generate_wallet.py  init_db.py  meta-allocator-build-Cargo.toml  paper_trading_engine.py  prometheus.rules.yml  prometheus.yml  rollback_docker.sh  rollback_docker_state.txt  rollback_images.txt  rollback_info.txt  rust-toolchain.toml  (+2 more)
meme-snipe-v18/.cargo/: config.toml
meme-snipe-v18/.github/: copilot-instructions.md
meme-snipe-v18/alert_relay/: Cargo.toml
meme-snipe-v18/alert_relay/src/: main.rs
meme-snipe-v18/analysis/: Dockerfile  requirements.txt  supervisor.conf
meme-snipe-v18/autonomous_allocator/: Cargo.toml
meme-snipe-v18/dashboard/: Dockerfile  app.py  requirements.txt
meme-snipe-v18/dashboard/templates/: index.html
meme-snipe-v18/data_consumers/: Dockerfile  alpha_decay_monitor.py  base_consumer.py  bridge_consumer.py  depth_consumer.py  enhanced_price_consumer.py  funding_consumer.py  helius_rpc_price_consumer.py  onchain_consumer.py  real_market_data_consumer.py  requirements.txt  social_consumer.py  watchdog_service.py
meme-snipe-v18/docs/: STRATEGY_TEMPLATE.md
meme-snipe-v18/executor/: Cargo.toml  Dockerfile
meme-snipe-v18/executor/src/: config.rs  database.rs  executor.rs  jito_client.rs  jupiter.rs  main.rs  portfolio_monitor.rs  signer_client.rs
meme-snipe-v18/executor/src/strategies/: airdrop_rotation.rs  bridge_inflow.rs  dev_wallet_drain.rs  korean_time_burst.rs  liquidity_migration.rs  mean_revert_1h.rs  mod.rs  momentum_5m.rs  perp_basis_arb.rs  rug_pull_sniffer.rs  social_buzz.rs
meme-snipe-v18/meta_allocator/: Cargo.toml  Dockerfile  Dockerfile.simple
meme-snipe-v18/meta_allocator/src/: main.rs
meme-snipe-v18/nginx/: nginx.conf
meme-snipe-v18/position_manager/: Cargo.toml  Dockerfile
meme-snipe-v18/position_manager/src/: config.rs  database.rs  jupiter.rs  main.rs  position_monitor.rs  signer_client.rs
meme-snipe-v18/risk_guardian/: Cargo.toml
meme-snipe-v18/risk_guardian/src/: main.rs
meme-snipe-v18/scripts/: check-wallets.sh  deploy_vm_gcp.sh  optimize_database.py  validate-env.sh
meme-snipe-v18/shared/: Cargo.toml  api_config.py  trades_v18.db.backup
meme-snipe-v18/shared-models/: Cargo.toml
meme-snipe-v18/shared-models/src/: lib.rs  strategy_action.rs
meme-snipe-v18/signer/: Cargo.toml  Dockerfile
meme-snipe-v18/signer/src/: main.rs
meme-snipe-v18/strategy_factory/: Dockerfile  factory.py
meme-snipe-v18/wallet_guard/: Cargo.toml
meme-snipe-v18/wallet_guard/src/: main.rs
