[workspace]
members = [
    "executor",
    "autonomous_allocator",
    "risk_guardian",
    "position_manager",
    "wallet_guard",
    "signer",
    "shared",
    "drift-rs",
]
resolver = "2"

[workspace.package]
version = "18.0.0"
authors = ["MemeSnipe Team"]
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/your-org/memesnipe-v18"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Database and caching
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager", "streams"] }

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Metrics and logging
prometheus = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Solana
solana-sdk = "1.17"
solana-client = "1.17"
anchor-client = "0.29"
anchor-lang = "0.29"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
base64 = "0.21"
hex = "0.4"
rand = "0.8"
futures = "0.3"
futures-util = "0.3"
parking_lot = "0.12"

# Security
argon2 = "0.5"
jsonwebtoken = "9.2"

# Testing
mockall = "0.12"
proptest = "1.4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false
overflow-checks = false

[profile.release.package."*"]
opt-level = 3
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 2
debug = true

[profile.bench]
opt-level = 3
lto = "thin"