[package]
name = "executor"
version = "18.0.0" # Updated version
edition = "2021"

[dependencies]
# Internal
shared-models = { path = "../shared-models" }

# Async
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
async-trait = "0.1" # For async traits

# Web & API
axum = "0.7"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
prometheus = "0.13"
axum-prometheus = "0.4"

# Solana & Jito
solana-client = { workspace = true }
solana-sdk = { workspace = true }
# Jito integration (temporarily disabled for build)
# jito-searcher-client = { git = "https://github.com/jito-labs/searcher-client.git", tag = "v0.4.0", features = ["ws"] }

# Database & Storage
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
redis = { version = "0.25", features = ["tokio-comp"] }

# Utilities
anyhow = "1.0"
base64 = "0.22"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
lazy_static = "1.4.0"
inventory = "0.1" # For strategy discovery
rand = "0.8" # For simulated PnL
chrono-tz = "0.8" # For Korean time strategy

# Drift
# drift-rs = { git = "https://github.com/drift-labs/drift-rs.git", tag = "v1.0.0-alpha.14" }

# Optimized release profile for maximum performance
[profile.release]
lto = "fat"           # Enable Link-Time Optimization across all crates
codegen-units = 1     # Reduce parallelism for better optimization
strip = true          # Strip symbols from the binary
panic = "abort"       # Abort on panic for smaller binary and no unwinding overhead
