[package]
name = "executor"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
prometheus = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
anchor-client = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
parking_lot = { workspace = true }

# Local dependencies
shared = { path = "../shared" }
drift-rs = { path = "../drift-rs" }

# Executor-specific dependencies
lazy_static = "1.4"
dashmap = "5.5"
rayon = "1.8"
num_cpus = "1.16"

[dev-dependencies]
mockall = { workspace = true }
proptest = { workspace = true }
criterion = "0.5"

[[bench]]
name = "strategy_benchmark"
harness = false
