[package]
name = "position_manager"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
axum = { workspace = true }
prometheus = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
reqwest = { workspace = true }

# Local dependencies
shared = { path = "../shared" }
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
redis = { version = "0.25", features = ["tokio-comp"] }

# Utilities
anyhow = "1.0"
base64 = "0.22"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
lazy_static = "1.4.0"


# Drift (Temporarily disabled to resolve dependency conflicts)
# drift-rs = { git = "https://github.com/drift-labs/drift-rs.git", tag = "v1.0.0-alpha.14" }
