[package]
name = "risk_guardian"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
axum = { workspace = true }
prometheus = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }

# Local dependencies
shared = { path = "../shared" }

# Risk-specific dependencies
ordered-float = "4.2"
