[package]
name = "signer"
version = "0.1.0"
edition = "2021"

[dependencies]
shared-models = { path = "../shared-models" }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-sdk = "1.18"
anyhow = "1.0"
base64 = "0.22"
bincode = "1.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
