[package]
name = "signer"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
redis = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
prometheus = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }

# Local dependencies
shared = { path = "../shared" }

# Security dependencies
ed25519-dalek = "2.1"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
