[package]
name = "wallet_guard"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-client = "1.16"
solana-sdk = "1.16"
redis = { version = "0.23", features = ["aio"] }
tracing = "0.1"
tracing-subscriber = "0.3"
